--- a/index.html
+++ b/index.html
@@ -21,28 +21,29 @@
   <body>
     <p class="nig">welcome 3hat</p>
     <img
-      src="C:\Users\adam\Pictures\Screenshot_20250811-030042~6.png"
+      src="Screenshot_20250811-030042~6.png"
       alt="el 3hat news"
     />
     <hr />
     <img
-      src="C:\Users\adam\Pictures\Screenshot_20250811-030042~7.png"
+      src="Screenshot_20250811-030042~7.png"
       alt="el 3hat news"
     />
     <hr />
     <img
-      src="C:\Users\adam\Pictures\Screenshot_20250811-030042~3.png"
+      src="Screenshot_20250811-030042~3.png"
       alt="el 3hat news"
     />
     <img
-      src="C:\Users\adam\Pictures\Screenshot_20250811-030042~4.png"
+      src="Screenshot_20250811-030042~4.png"
       alt="el3hat news"
     />
     <hr />
     <p class="spices"><b>10/8/2025</b></p>
     <img
-      src="C:\Users\adam\Pictures\Screenshot_20250811-030042~8.png"
+      src="Screenshot_20250811-030042~8.png"
       alt="el3hat news"
     />
   </body>
 </html>
+
