--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
   <head>
-    <link rel="stylesheet" href="C:\Users\adam\Documents\html\hnl\adam.css" />
+    <link rel="stylesheet" href="adam.css" />
     <meta charset="UTF-8" />
     <title>متصفح el3hat</title>
     <meta charset="UTF-8" />
@@ -46,4 +46,5 @@
     />
   </body>
 </html>
+
 
